Template populated with acceptance criteria for user stories

--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,8 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 
-\title{Template for documenting running the acceptance tests Roslyn Walker}
-\author{roslyn.walker }
+\title{Template for documenting running the acceptance tests}
+\author{Roslyn Walker }
 \date{October 2019}
 
 \usepackage{natbib}
@@ -13,10 +13,43 @@
 \maketitle
 
 \section{Introduction}
+Task:
+
 1. Create a template for documenting running the acceptance tests you’ve identified. 
+
 2. Make sure your project management system can track errors that you find and need to fix (or document) with these tests.
+
 3. Make sure you have a place where it is easy to document your specific acceptance tests, both good and bad
 
 
+\section {Testing yet to be done}
+1. User story: select data from social media using a specific search
+
+2. User story aggregate data results from the search
+
+3. User story export the data in tabular form
+
+4. User story be able to search and sort the data output
+
+5. User story code the data for analysis (tag records)
+
+
+
+
+\section {Testing completed}
+
+
+\section {Acceptance Tests Template}
+Objective:
+
+Time stamp: 
+
+Actions: 
+
+Results:
+
+Errors: 
+
+Solutions/Notes: Test successful/Test unsuccessful
 
 \end{document}
